smithy-model/src/test/resources/software/amazon/smithy/model/loader/invalid/map-invalid-member.smithy
// Parse error at line 7, column 7 near `: `: Unexpected member of com.foo#MyMap: 'fuzz'
namespace com.foo

map MyMap {
  key: smithy.api#String,
  value: smithy.api#String,
  fuzz: smithy.api#String,
}
